--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,13 +14,11 @@
             <%= f.label :name %><br />
             <%= f.text_field :name, autofocus: true, autocomplete: "name"  %>
             <!--ページを読み込んだらすぐにautofocus属性を記述している部分にカーソルが移動して入力状態になる-->
-            
           </div>
 
           <div class="field">
             <%= f.label :email %><br />
             <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-            <!--パスワード欄の自動入力を抑止したい場合に-->
           </div>
 
           <div class="field">
@@ -29,6 +27,7 @@
             <em>(<%= @minimum_password_length %> characters minimum)</em>
             <% end %><br />
             <%= f.password_field :password, autocomplete: "new-password" %>
+            <!--パスワード欄の自動入力を抑止したい場合に-->
           </div>
 
           <div class="field">
@@ -39,9 +38,7 @@
           <div class="actions">
             <%= f.submit "Sign up" , class: 'btn btn-success' %>
             <!--この中に構文通りBootstrapの記述を入れてあげると変更がかかる-->
-            <!--class: '  'が公式の構文。：の後は半角とシングルクオテーションで括る-->
-  
-          </div>
+            <!--class: '  'が公式の構文。：の後は半角とシングルクオテーションで括る--
 <%= render "devise/shared/links" %>
 <!--これが"Log in"リンク部分。shared内の_link.html.erbから引っ張ってきている-->
 <!--devise/shared/links内には他に使うlinkもたくさん自動で作られている（deviseの機能)-->
