--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -21,10 +21,10 @@
             <p>about various books!</p>
             <div class="btn-wrapper col-10 mx-auto">
               <div class="row">
-                <%= link_to "login", new_user_session_path, class: 'text-light btn btn-info btn-sm btn-block mb-3 sign_in' %>
+                <%= link_to "Log in", new_user_session_path, class: 'text-light btn btn-info btn-sm btn-block mb-3 sign_in' %>
               </div>
               <div class="row">
-                <%= link_to "Sing up", new_user_registration_path, class: 'text-light btn btn-success btn-sm btn-block sign_in' %>
+                <%= link_to "Sing p", new_user_registration_path, class: 'text-light btn btn-success btn-sm btn-block sign_in' %>
                 <!--btn-infoとかbtn-successでスタイルを変更できる参考リンク：http://www.tohoho-web.com/bootstrap/buttons.html-->
                 <!--.btn-block は、横幅いっぱいのブロックレベルボタンを表示-->
               </div>
