--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,17 +4,17 @@
       <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
         <h2>User info</h2>
         <%= form_with model:@user, local:true do |f| %>
-        <% if @user.errors.any? %>  
-          <div id="error_explanation">
-          <h2><%= pluralize(@user.errors.count, "error") %> 件のエラーが発生しました</h2>
-            <ul>
-            <% @user.errors.full_messages.each do |message| %>
-            <!--全ての属性に関するエラーメッセージを表示-->
-            <li><%= message %></li>
-            <% end %>
-            </ul>
-          </div>
-        <% end %>  
+          <% if @user.errors.any? %>  
+            <div id="error_explanation">
+            <h2><%= pluralize(@user.errors.count, "error") %> prohibited this obj from being saved:</h2>
+              <ul>
+              <% @user.errors.full_messages.each do |message| %>
+              <!--全ての属性に関するエラーメッセージを表示-->
+              <li><%= message %></li>
+              <% end %>
+              </ul>
+            </div>
+          <% end %>  
               
           <div class="form-group">
             <label for="inputName">Name</label><br>
