--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,30 +1,39 @@
-<%= render 'books/list', user: @user, book: @book %>
-<%= flash[:notice] %></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
 
-      <div class="col-md-8 offset-md-1"><!--ここから右側のUser info-->
-        <h1 class="index-head">Books</h1>
-        <table class="table table-hover table-inverse">
-          <thead>
-            <tr>
-              <th class="1"></th>
-              <th class="2">Title</th>
-              <th class="3">Opinion</th>
-              <th colspan="4"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @books.each do |book| %>
-            <% @users.each do |user| %>
-            <tr>
-              <td class="1"><%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no-image-icon-small.jpeg" %></td>
-              <td class="2"><%= link_to "#{book.title}", book_path(book.user_id) %></td>
-              <td class="3"><%= book.body %></td>
-                <!--book.id or bookでidをとってくる-->
-            </tr>
-            <% end %>
-            <% end %>
-          </tbody>
-        </table>
+    <div class="col-md-3">
+     <%= flash[:notice] %>
+      <%= render 'books/list', user: @user, book: @book %>
     </div>
+
+    <div class="col-md-8 offset-md-1"><!--ここから右側のUser info-->
+      <h1 class="index-head">Books</h1>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th class="1"></th>
+            <th class="2">Title</th>
+            <th class="3">Opinion</th>
+            <th colspan="4"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+          <%# @users.each do |user| %>
+          <tr>
+            <td class="1"><%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no-image-icon-small.jpeg" %></td>
+            <!--book.userは、schemaのuser_id, book classのbelomgs_toとcreate時にidを代入しているため-->
+            <!--User.find(book.user_id) == book.user-->
+            <!--<td class="2"><%#= link_to "#{book.title}", book_path(book.user_id) %></td>-->
+            <td class="2"><%= link_to "#{book.title}", book_path(book.id) %></td>
+            <td class="3"><%= book.body %></td>
+              <!--book.id or bookでidをとってくる-->
+          </tr>
+          <% end %>
+          <%# end %>
+        </tbody>
+      </table>
+    </div>
+
   </div>
-</main>
+</div>
