--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,31 +1,36 @@
-<%= render 'books/list', user: @user, book: @book %>
-<%= flash[:notice] %></p>
-
-      <div class="col-md-8 offset-md-1"><!--ここから右側のUser info-->
-        <h1 class="index-head">Books detail</h1>
-        <table class="table table-hover table-inverse">
-          <thead>
-          </thead>
-          <tbody>
-            <% @books.each do |book| %>
-            <tr>
-              <td>
-                <%#= link_to attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg" , user_path(book.id) %>
-                <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg"  %>
-                <br><span><%= link_to "#{@user.name}", user_path(book.id) %></span>
-              </td>
-              <td><%= link_to "#{book.title}", book_path(book.id) %></td>
-              <td><%= book.body %></td>
-                <!--book.id or bookでidをとってくる-->
-              <% if @book.user == current_user %>
-              <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <p><%= flash[:notice] %></p>
+      <%= render 'books/list', user: @user, book: @book %>
+    </div>
+    <div class="col-md-8 offset-md-1"><!--ここから右側のUser info-->
+      <h1 class="index-head">Books detail</h1>
+      <table class="table table-hover table-inverse">
+        <thead>
+        </thead>
+        <tbody>
+          <%# @user.books.each do |book| %>
+          <tr>
+            <td>
+              <%#= link_to attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg" , user_path(book.id) %>
+              <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg"  %>
+              <br><span><%= link_to "#{@user.name}", user_path(@user.id) %></span>
+            </td>
+            <td><%= link_to "#{@book.title}", book_path(@book.id) %></td>
+            <td><%= @book.body %></td>
+              <!--book.id or bookでidをとってくる-->
+            <% if @book.user == current_user %>
+            <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
               <!--idを持った変数を引数に渡すことで、正しいパスとなる-->
-              <td><%= link_to "Destroy", book_path(book.id),method: :delete, data: { confirm: 'Are you sure?' }%></td>
+            <td><%= link_to "Destroy", book_path(@book.id),method: :delete, data: { confirm: 'Are you sure?' }%></td>
               <!--methodをdestroyに変更することで削除でき、一覧画面に戻るpathとなる-->
               <!--destroyアクションを使用して削除機能を実装しているが、使用するHTTPメソッドはdelete-->
-              <% end %>
-            </tr>
             <% end %>
-          </tbody>
-        </table>
+          </tr>
+            <%# end %>
+        </tbody>
+      </table>
     </div>
+  </div>
+</div>
