--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,32 @@
-<%= render 'books/list', user: @user, book: @book %>
-<%= flash[:notice] %></p>
-
-      <div class="col-md-8 offset-md-1"><!--ここから右側のUser info-->
-        <h1 class="index-head">Users</h1>
-        <table class="table table-hover table-inverse">
-          <thead>
-            <tr>
-              <th>image</th>
-              <th>name</th>
-              <th colspan="3"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @users.each do |user| %>
-            <tr>
-              <td><%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no-image-icon-small.jpeg" %></td>
-              <td><%= user.name %></td>
-              <td><%= link_to "show", user_path(user.id) %></td>
-                <!--book.id or bookでidをとってくる-->
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+     <%= flash[:notice] %>
+      <%= render 'books/list', user: @user, book: @book %>
     </div>
+
+    <div class="col-md-8 offset-md-1"><!--ここから右側のUser info-->
+      <h1 class="index-head">Users</h1>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+          <tr>
+            <td><%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no-image-icon-small.jpeg" %></td>
+            <td><%= user.name %></td>
+            <td><%= link_to "show", user_path(user.id) %></td>
+              <!--book.id or bookでidをとってくる-->
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
   </div>
-</main>
+</div>
