--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -13,7 +13,7 @@
 
 <h2>User info</h2>
 <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg" %>
-<table>
+<table class="table table-hover table-inverse">
   <tbody>
     <tr>
       <th>name</th>
@@ -55,7 +55,7 @@
   
   <div class="index-text-box">
     <p></p>
-    <%= f.submit 'Create Book'%>
+    <%= f.submit 'Create Book', class: 'btn btn-success'%>
     <%#= f.submit 'Create Book', class="btn btn-success btn-sm btn-block sign_in"%>
   </div>
   
