--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-md-3">
-     <%= flash[:notice] %>
+      <p class="text-success"><%= flash[:notice] %></p>
       <%= render 'books/list', user: @user, book: @book %>
     </div>
 
@@ -21,7 +21,10 @@
           <% @books.each do |book| %>
           <%# @users.each do |user| %>
           <tr>
-            <td class="1"><%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no-image-icon-small.jpeg" %></td>
+            <td class="1">
+            <%= link_to user_path(book.id) do %>
+            <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no-image-icon-small.jpeg" %></td>
+            <% end %>
             <!--book.userは、schemaのuser_id, book classのbelomgs_toとcreate時にidを代入しているため-->
             <!--User.find(book.user_id) == book.user-->
             <!--<td class="2"><%#= link_to "#{book.title}", book_path(book.user_id) %></td>-->
