--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,11 +1,12 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <p><%= flash[:notice] %></p>
-      <%= render 'books/list', user: @user, book: @book %>
+      <p class="text-success"><%= flash[:notice] %></p>
+      <%= render 'books/list', user: @user, book: @book_new %>
     </div>
+
     <div class="col-md-8 offset-md-1"><!--ここから右側のUser info-->
-      <h1 class="index-head">Books detail</h1>
+      <h1 class="index-head">Book detail</h1>
       <table class="table table-hover table-inverse">
         <thead>
         </thead>
@@ -13,8 +14,10 @@
           <%# @user.books.each do |book| %>
           <tr>
             <td>
-              <%#= link_to attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg" , user_path(book.id) %>
+              <%= link_to user_path(@book.id) do %>
               <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg"  %>
+              <% end %>
+              <!--do とendで1セット。間に記載した-->
               <br><span><%= link_to "#{@user.name}", user_path(@user.id) %></span>
             </td>
             <td><%= link_to "#{@book.title}", book_path(@book.id) %></td>
