--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,16 +1,15 @@
 <main>
-  <%= flash[:notice] %>
+  <p class="text-success"><%= flash[:notice] %></p>
   <p id="notice"></p>
   <div class="container">
     <div class="row">
       <h1 class="px-3 mx-auto">
-        welcome to 
+        welcome to
       <i class="fas fa-book">
-        
+
       </i>
       <strong>Bookers</strong>!!
       </h1>
     </div>
   </div>
 </main>
-
