--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,4 @@
-    <%= flash[:notice] %>
+    <p class="text-success"><%= flash[:notice] %></p>
     <main>
       <p id="notice"></p>
       <div class-"container">
