--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
               <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li class="nav-item">
-                  <%= link_to "Home", root_path, class: 'fas fa-home nav-link text-light' %>
+                  <%= link_to "Home", user_path(current_user.id), class: 'fas fa-home nav-link text-light' %>
                 </li>
                 <li class="nav-item">
                   <%= link_to "Users", users_path, class: 'fas fa-users nav-link text-light' %>
@@ -45,7 +45,7 @@
                   <%= link_to "Home", root_path, class: 'fas fa-home nav-link text-light' %>
                 </li>
                 <li>
-                  <%= link_to "About", homes_about_path, class: 'fas fa-link nav-link text-light' %>
+                  <%= link_to "About", home_about_path, class: 'fas fa-link nav-link text-light' %>
                 </li>
                 <li>
                   <%= link_to "sign up", new_user_registration_path, class: 'fas fa-user-plus nav-link text-light' %>
