--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-     <%= flash[:notice] %>
+      <p class="text-success"><%= flash[:notice] %></p>
       <%= render 'books/list', user: @user, book: @book %>
     </div>
 
@@ -20,7 +20,7 @@
           <tr>
             <td><%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no-image-icon-small.jpeg" %></td>
             <td><%= user.name %></td>
-            <td><%= link_to "show", user_path(user.id) %></td>
+            <td><%= link_to "Show", user_path(user.id) %></td>
               <!--book.id or bookでidをとってくる-->
           </tr>
           <% end %>
