--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-     <%= flash[:notice] %>
+      <p class="text-success"><%= flash[:notice] %></p>
       <%= render 'books/list', user: @user, book: @book %>
     </div>
     
@@ -19,7 +19,9 @@
         <tbody>
           <% @books.each do |book| %>
           <tr>
+            <%= link_to user_path(@user.id) do %>
             <td><%= attachment_image_tag @user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpeg" %></td>
+            <% end %>
             <td><%= link_to "#{book.title}", book_path(book.id) %></td>
             <td><%= book.body %></td>
               <!--book.id or bookでidをとってくる-->
