Favorite/comment fanction

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,17 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+
+
+.like-btn {
+ color:red;
+ }
+
+.unlike-btn {
+  color:blue;
+ }
+
+ .textarea {
+   width: 10%;
+   background-color:red;
+ }
