--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -31,6 +31,20 @@
             <td class="2"><%= link_to "#{book.title}", book_path(book.id) %></td>
             <td class="3"><%= book.body %></td>
               <!--book.id or bookでidをとってくる-->
+            <td class="4">
+              <% if book.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
+                <%=link_to book_favorites_path(book.id), method: :delete do %>
+                  <i class="far fa-heart like-btn" ><%= book.favorites.count %></i>
+                <% end %>
+              <% else %>
+                <%=link_to book_favorites_path(book.id), method: :post do %>
+                  <i class="far fa-heart unlike-btn" ><%= book.favorites.count %></i>
+                <% end %>
+              <% end %>
+            </td>
+            <td class="5">
+              <p>コメント件数：<%= @book.book_comments.count %></p>
+            </td>
           </tr>
           <% end %>
           <%# end %>
