finish comment/favotite fanction

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -43,7 +43,7 @@
               <% end %>
             </td>
             <td class="5">
-              <p>コメント件数：<%= @book.book_comments.count %></p>
+              <p>コメント件数：<%= book.book_comments.count %></p>
             </td>
           </tr>
           <% end %>
