--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -11,6 +11,7 @@
   </div>
 <% end %>
 
+
 <h2>User info</h2>
 <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg" %>
 <table class="table table-hover table-inverse">
@@ -23,43 +24,31 @@
       <th>introduction</th>
       <th><%= user.introduction %></th>
     </tr>
+    <tr>
+      <th>followers</th>
+      <th><%= link_to "#{user.followers.count}", followers_user_path(user.id) %></th>
+    </tr>
+    <tr>
+      <th>followeds</th>
+      <th><%= link_to "#{user.followeds.count}", followeds_user_path(user.id) %></th>
+    </tr>
+    <tr>
+      <th
+        <% if current_user != user %>
+          <% if current_user.follower?(user) %>
+              <p><%=link_to "フォロー外す", user_relationships_path(user.id), class: 'btn btn-info', method: :delete %></p>
+            <% else %>
+              <p><%=link_to "フォローする", user_relationships_path(user.id), class: 'btn btn-success', method: :post %></p>
+          <% end %>
+        <% end %>
+      </th>
+    </tr>
+
   </tbody>
 </table>
 
 <% if current_user.id %>
     <!--ログインしたユーザが投稿した本人かどうかview内で表示を分ける記載-->
   <%= link_to "", edit_user_path(@user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog edit_user_31580' %>
-  
-<% end %>
-<h2 class="mt-3">New book</h2>
-<%= form_with model:book, local:true do |f| %>
-        <!--form_with model:インスタンス変数 do ||-->
-        <!--Railsは渡されたモデル(@blog)の中身が空であることから、createメソッドを呼び出すことを判断-->
-<div class="index-new">
-  
-  <div class="index-text-box">
-    <p>Title</p>
-    <%= f.text_field :title %>
-    <% if book.errors.include?(:title) %>
-    <p style="color: red;"><%= book.errors.full_messages_for(:title).first %>
-    <% end %>
-  </div>
-  
-  <div class="index-text-box">
-    <p>Opinion</p>
-    <%= f.text_area :body %>
-    <% if @book.errors.include?(:body) %>
-    <p style="color: red;"><%= book.errors.full_messages_for(:body).first %>
-    <% end %>
-  </div>
-  
-  <div class="index-text-box">
-    <p></p>
-    <%= f.submit 'Create Book', class: 'btn btn-success'%>
-    <%#= f.submit 'Create Book', class="btn btn-success btn-sm btn-block sign_in"%>
-  </div>
-  
-</div>
-<% end %>
 
- <!--ここまで左側のUser info-->
+<% end %>
