--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,9 @@
     <div class="col-md-3">
       <p class="text-success"><%= flash[:notice] %></p>
       <%= render 'books/list', user: @user, book: @book %>
+      <%= render 'books/userinfo', user: @user, book: @book %>
     </div>
-    
+
     <div class="col-md-8 offset-md-1"><!--ここから右側のUser info-->
       <h1 class="index-head">Books</h1>
       <table class="table table-hover table-inverse">
