Updated finish search function

--- a/app/views/searchs/search.html.erb
+++ b/app/views/searchs/search.html.erb
@@ -1,13 +1,6 @@
-<% if user_signed_in? %>
-<div class='search'>
-  <%= form_tag(searchs_search_path, method: :get) do %>
-    <%= text_field_tag 'word' %>
-    <%= select_tag 'range', options_for_select([['---選択してください---',''], ['User', '1'], ['Book', '2']]) %>
-    <%= select_tag 'search', options_for_select([['前方一致', 'forword_match'], ['後方一致', 'backword_match'],['完全一致', 'perfect_match'], ['部分一致', 'partial_match']]) %>
-    <%= submit_tag '検索' %>
-  <% end %>
+<div class="col-md-8 offset-md-1">
+<%= render 'searchs/search' %>
 </div>
-<% end %>
 
 <% if @range == '1' %>
   <h2>Users search for "<%= @word %>"</h2>
@@ -50,7 +43,7 @@
       <% @book.each do |book| %>
       <tr>
         <td>
-            <%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
+            <%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon-small.jpeg") %>
         </td>
         <td><%= link_to book_path(book) do %>
             <%= book.title %> <% end %>
