--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-3">
       <p class="text-success"><%= flash[:notice] %></p>
       <%= render 'books/list', user: @user, book: @book %>
-      <%= render 'books/userinfo', user: @user, book: @book %>
+      <%= render 'books/userinfo', user: @user, book: @book_new %>
     </div>
 
     <div class="col-md-8 offset-md-1"><!--ここから右側のUser info-->
