--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,25 +26,18 @@
           <%# @users.each do |user| %>
           <tr>
             <td class="1">
-            <%= link_to user_path(book.id) do %>
-            <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no-image-icon-small.jpeg" %></td>
-            <% end %>
-            <!--book.userは、schemaのuser_id, book classのbelomgs_toとcreate時にidを代入しているため-->
-            <!--User.find(book.user_id) == book.user-->
-            <!--<td class="2"><%#= link_to "#{book.title}", book_path(book.user_id) %></td>-->
+              <%= link_to user_path(book.id) do %>
+              <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no-image-icon-small.jpeg" %>
+              <% end %>
+            </td>
+              <!--book.userは、schemaのuser_id, book classのbelomgs_toとcreate時にidを代入しているため-->
+              <!--User.find(book.user_id) == book.user-->
+              <!--<td class="2"><%#= link_to "#{book.title}", book_path(book.user_id) %></td>-->
             <td class="2"><%= link_to "#{book.title}", book_path(book.id) %></td>
             <td class="3"><%= book.body %></td>
               <!--book.id or bookでidをとってくる-->
-            <td class="4">
-              <% if book.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
-                <%=link_to book_favorites_path(book.id), method: :delete do %>
-                  <i class="far fa-heart like-btn" ><%= book.favorites.count %></i>
-                <% end %>
-              <% else %>
-                <%=link_to book_favorites_path(book.id), method: :post do %>
-                  <i class="far fa-heart unlike-btn" ><%= book.favorites.count %></i>
-                <% end %>
-              <% end %>
+            <td class=<%= "table__favorite--" + book.id.to_s %>>
+              <%= render 'favorites/favorite-btn', book: book%>
             </td>
             <td class="5">
               <p>コメント件数：<%= book.book_comments.count %></p>
