--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,12 +24,9 @@
             <td><%= link_to "#{@book.title}", book_path(@book.id) %></td>
             <td><%= @book.body %></td>
               <!--book.id or bookでidをとってくる-->
-            <td class="4">
-              <% if @book.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
-                  <span class="far fa-heart like-btn" ><%= @book.favorites.count %></span>
-              <% else %>
-                  <span class="far fa-heart unlike-btn" ><%= @book.favorites.count %></span>
-              <% end %>
+
+            <td class=<%= "table__favorite--" + @book.id.to_s %>>
+              <%= render 'favorites/favorite-btn', book: @book%>
             </td>
 
             <td class="5">
@@ -46,43 +43,20 @@
           </tr>
         </tbody>
       </table>
-      <table>
-        <% @book.book_comments.each do |book_comment| %>
-        <%#= render 'layouts/errors', obj: @book.book_comments %>
-        <tr>
-          <div class="comments">
-          <td>
-            <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpeg"  %>
-          </td>
-          <td>
-            <%= book_comment.user.name %>
-             <!--attachment_image_tag 保存先インスタンス名, :保存先カラム名, :サイズ（横幅,高さ）, 画像拡張子, 代替画像-->
-          </td>
-          <td>
-            <%= book_comment.comment %>
-          </td>
-            <!--削除を表示-->
-          <td>
-           <% if book_comment.user == current_user %>
-            <div class="comment-delete">
-               <%=link_to "Destroy",book_book_comment_path(book_comment.book, book_comment), method: :delete ,class: 'btn btn-danger' %>
-              <!--book_commentからbookを特定する、book_comment.idもわたす。2つIDが必要-->
-              <% end %>
-            </div>
-          </td>
-        </div>
-        </tr>
-        <% end %>
-      </table>
+
+      <div id="comment">
+        <%= render 'book_comments/comment', book: @book, user: @user%>
+      </div>
 
       <div class="col-md-8", "new-comment">
-        <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+        <%= form_with(model:[@book, @book_comment]) do |f| %>
         <div class='commentarea'>
          <%= f.text_area :comment, rows:'5', cols:'90px', placeholder: "" %>
         </div>
           <br><%= f.submit "送信" ,class: 'btn btn-success'%>
         <% end %>
       </div>
-    </div>
   </div>
 </div>
+
+
