added DM and ActionMailer batch function

--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,2 +1,2 @@
 $('#comment').html("<%= j(render 'book_comments/comment', book: @book, user: @user) %>");
-$("textarea").val('')
+$("textarea").val('');
